fixed problem of seals
